Add presentation on Linux distributions for FLISoL Sucre 2025
- Introduced key concepts of Linux and its importance.
- Detailed major distributions: Ubuntu, Fedora, and Arch Linux.
- Included a comparative table of distributions based on usability, community support, and innovation.
- Provided contact information for further inquiries.

Signed-off-by: Draexx <p.carranza.is@gmail.com>

--- a/index.html
+++ b/index.html
@@ -84,31 +84,29 @@
 
     <main>
         <div class="presentations">
-            <!-- Ejemplo de una presentación -->
+            <!-- Presentación: Go! Conociendo una Alternativa -->
             <div class="presentation-card">
-                <h3><a href="./go/">Introducción a go</a></h3>
+                <h3><a href="./go/">Go! Conociendo una Alternativa</a></h3>
+                <div class="date">Diciembre 2017</div>
+                <div class="tags">
+                    <span class="tag">Go</span>
+                    <span class="tag">Introducción</span>
+                </div>
+                <p>Presentación sobre el lenguaje Go realizada en el GDG BootCamp.</p>
+                <a href="./go/">Ver presentación →</a>
+            </div>
+
+            <!-- Nueva Presentación: Distribuciones Linux -->
+            <div class="presentation-card">
+                <h3><a href="./linux/distribuciones_linux_flisol_2025.md">Distribuciones Linux</a></h3>
                 <div class="date">Abril 2025</div>
                 <div class="tags">
-                    <span class="tag">go</span>
-                    <span class="tag">tutorial</span>
+                    <span class="tag">Linux</span>
+                    <span class="tag">Distribuciones</span>
                 </div>
-                <p>Una guía completa sobre cómo usar Markdown para crear documentos y presentaciones efectivas.</p>
-                <a href="./presentacion1/">Ver presentación →</a>
+                <p>Exploración de las principales distribuciones Linux, presentada en el FLISoL Sucre 2025.</p>
+                <a href="./linux/distribuciones_linux_flisol_2025.md">Ver presentación →</a>
             </div>
-
-            <!-- Ejemplo de otra presentación -->
-            <div class="presentation-card">
-                <h3><a href="./distribuciones/">distribuciones</a></h3>
-                <div class="date">Marzo 2025</div>
-                <div class="tags">
-                    <span class="tag">timeLine</span>
-                    <span class="tag">distribuciones</span>
-                </div>
-                <p>Conceptos básicos de control de versiones con Git y GitHub para desarrolladores.</p>
-                <a href="./distribuciones/">Ver presentación →</a>
-            </div>
-
-            <!-- Puedes duplicar estos bloques para añadir más presentaciones -->
         </div>
     </main>
 
