Actualizar el pie de página en index.html para reflejar el nombre correcto del autor
Signed-off-by: Draexx <p.carranza.is@gmail.com>

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </main>
 
     <footer>
-        <p>© 2025 Tu Nombre - <a href="https://github.com/draexx">GitHub</a></p>
+        <p>© 2025 Draexx - <a href="https://github.com/draexx">GitHub</a></p>
     </footer>
 </body>
 </html>
