Add initial presentation setup using Reveal.js with markdown support
Signed-off-by: Draexx <p.carranza.is@gmail.com>

--- a/index.html
+++ b/index.html
@@ -92,20 +92,22 @@
                     <span class="tag">Go</span>
                     <span class="tag">Introducción</span>
                 </div>
-                <p>Presentación sobre el lenguaje Go realizada en el GDG BootCamp.</p>
-                <a href="./go/">Ver presentación →</a>
+                <p>Presentación sobre el lenguaje Go realizada en el GDG BootCamp. Explora las características principales del lenguaje y su ecosistema.</p>
+                <a href="./go/">Ver presentación →</a> | 
+                <a href="./go/go_conociendo_una_alternativa.pdf" download>Descargar PDF</a>
             </div>
 
-            <!-- Nueva Presentación: Distribuciones Linux -->
+            <!-- Presentación: Distribuciones Linux -->
             <div class="presentation-card">
-                <h3><a href="./linux/distribuciones_linux_flisol_2025.md">Distribuciones Linux</a></h3>
+                <h3><a href="./distribuciones_linux/">Distribuciones Linux</a></h3>
                 <div class="date">Abril 2025</div>
                 <div class="tags">
                     <span class="tag">Linux</span>
                     <span class="tag">Distribuciones</span>
                 </div>
-                <p>Exploración de las principales distribuciones Linux, presentada en el FLISoL Sucre 2025.</p>
-                <a href="./linux/distribuciones_linux_flisol_2025.md">Ver presentación →</a>
+                <p>Exploración de las principales distribuciones Linux, presentada en el FLISoL Sucre 2025. Aprende sobre Ubuntu, Fedora, Arch Linux y más.</p>
+                <a href="./distribuciones_linux/">Ver presentación →</a> | 
+                <a href="./distribuciones_linux/distribuciones_linux_flisol_2025.pdf" download>Descargar PDF</a>
             </div>
         </div>
     </main>
