--- a/distribuciones_linux/index.html
+++ b/distribuciones_linux/index.html
@@ -7,7 +7,9 @@
   
   <!-- Estilos de Reveal.js desde CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/reveal.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/theme/white.min.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/theme/white.min.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/theme/night.min.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/theme/serif.min.css"> -->
   
   <!-- Puedes cambiar el tema por otro de los disponibles: black, white, league, beige, sky, night, serif, simple, solarized, moon, blood -->
   <!-- Por ejemplo: <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/theme/night.min.css"> -->
@@ -33,6 +35,9 @@
   </style>
 </head>
 <body>
+  <div style="position: fixed; top: 10px; left: 10px; z-index: 100;">
+    <img src="ruta/a/logo.png" alt="Logo" style="height: 50px;">
+  </div>
   <div class="reveal">
     <div class="slides">
       <!-- Esta sección cargará tu archivo markdown -->
@@ -61,7 +66,7 @@
       height: 700,
       margin: 0.1,
       hash: true,  // Permite navegar con URLs con hash
-      transition: 'slide', // none/fade/slide/convex/concave/zoom
+      transition: 'convex', // Cambia a 'fade', 'zoom', 'slide', etc.
       
       // Plugins activados
       plugins: [
