--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <span class="tag">Introducción</span>
                 </div>
                 <p>Presentación sobre el lenguaje Go realizada en el GDG BootCamp. Explora las características principales del lenguaje y su ecosistema.</p>
-                <a href="./go/">Ver presentación →</a> | 
+                <a href="./go/go_conociendo_una_alternativa.pdf">Ver presentación →</a> | 
                 <a href="./go/go_conociendo_una_alternativa.pdf" download>Descargar PDF</a>
             </div>
 
