Agregar sección de fondo en la presentación y mejorar el enlace de regreso con icono en el índice
Signed-off-by: Draexx <p.carranza.is@gmail.com>

--- a/distribuciones_linux/index.html
+++ b/distribuciones_linux/index.html
@@ -33,6 +33,7 @@
     
     /* Opcional: Agrega tu estilo personalizado aquí */
   </style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
   <div style="position: fixed; top: 10px; left: 10px; z-index: 100;">
@@ -95,8 +96,10 @@
   </script>
   
   <!-- Opcional: Link de regreso al índice de presentaciones -->
-  <div style="position: fixed; bottom: 10px; left: 10px; z-index: 100; font-size: 0.5em;">
-    <a href="../">← Volver al índice de presentaciones</a>
+  <div style="position: fixed; bottom: 10px; left: 10px; z-index: 100; font-size: 0.8em;">
+    <a href="../" style="text-decoration: none; color: #3498db;">
+      <i class="fas fa-home"></i> Volver al índice de presentaciones
+    </a>
   </div>
 </body>
 </html>
