Implement code changes to enhance functionality and improve performance
Signed-off-by: Draexx <p.carranza.is@gmail.com>

--- a/distribuciones_linux/index.html
+++ b/distribuciones_linux/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
   <div style="position: fixed; top: 10px; left: 10px; z-index: 100;">
-    <img src="ruta/a/logo.png" alt="Logo" style="height: 50px;">
+    <img src="images/logo-sl.png" alt="Logo" style="height: 50px;">
   </div>
   <div class="reveal">
     <div class="slides">
