--- a/distribuciones_linux/index.html
+++ b/distribuciones_linux/index.html
@@ -37,7 +37,10 @@
 </head>
 <body>
   <div style="position: fixed; top: 30px; left: 30px; z-index: 100;">
-    <img src="images/logo-sl.png" alt="Logo" style="height: 100px;">
+    <img src="images/logo-sl.png" alt="Logo" style="height: 150px;">
+  </div>
+  <div style="position: fixed; top: 30px; right: 30px; z-index: 100;">
+    <img src="images/logo-flisol.png" alt="Logo-alt" style="height: 150px;">
   </div>
   <div class="reveal">
     <div class="slides">
