Implement code changes to enhance functionality and improve performance
Signed-off-by: Draexx <p.carranza.is@gmail.com>

--- a/distribuciones_linux/index.html
+++ b/distribuciones_linux/index.html
@@ -39,7 +39,7 @@
   <div style="position: fixed; top: 30px; left: 30px; z-index: 100;">
     <img src="images/logo-sl.png" alt="Logo" style="height: 150px;">
   </div>
-  <div style="position: fixed; top: 30px; right: 30px; z-index: 100;">
+  <div style="position: fixed; bottom: 40px; left: 30px; z-index: 100;">
     <img src="images/logo-flisol-white.png" alt="Logo-alt" style="height: 75px;">
   </div>
   <div class="reveal">
@@ -93,7 +93,7 @@
       // Vista general al presionar 'ESC'
       overview: true
     });
-    document.querySelector('.reveal').style.backgroundImage = "url('images/distro-bg.png')";
+    document.querySelector('.reveal').style.backgroundImage = "url('images/distro1-bg.png')";
     document.querySelector('.reveal').style.backgroundSize = "cover";
     document.querySelector('.reveal').style.backgroundPosition = "center";
   </script>
