--- a/distribuciones_linux/index.html
+++ b/distribuciones_linux/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi Presentación</title>
+  <title>Hablemos de Sabores... Las Distribuciones</title>
   
   <!-- Estilos de Reveal.js desde CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/reveal.min.css">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/theme/white.min.css"> -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/theme/moon.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/theme/league.min.css">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/theme/serif.min.css"> -->
   
   <!-- Puedes cambiar el tema por otro de los disponibles: black, white, league, beige, sky, night, serif, simple, solarized, moon, blood -->
@@ -36,11 +36,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+  <div style="position: fixed; top: 30px; left: 30px; z-index: 100;">
+    <img src="images/logo-flisol-white.png" alt="Logo-alt" style="height: 75px;">
+  </div>
   <div style="position: fixed; bottom: 30px; left: 30px; z-index: 100;">
     <img src="images/logo-sl.png" alt="Logo" style="height: 150px;">
   </div>
-  <div style="position: fixed; top: 30px; left: 30px; z-index: 100;">
-    <img src="images/logo-flisol-white.png" alt="Logo-alt" style="height: 75px;">
+  <div style="position: fixed; top: 30px; right: 30px; z-index: 100;">
+    <img src="images/title-slide.png" alt="Title-alt" style="height: 75px;">
   </div>
   <div class="reveal">
     <div class="slides">
@@ -93,7 +96,7 @@
       // Vista general al presionar 'ESC'
       overview: true
     });
-    document.querySelector('.reveal').style.backgroundImage = "url('images/distro1-bg.png')";
+    document.querySelector('.reveal').style.backgroundImage = "url('images/distro-bg.png')";
     document.querySelector('.reveal').style.backgroundSize = "cover";
     document.querySelector('.reveal').style.backgroundPosition = "center";
   </script>
