--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 </div>
             </div>
         </div>
+    </main>
     <footer>
         <div class="footer-content">
             <div class="footer-left">
